--- a/projects.json
+++ b/projects.json
@@ -1,7 +1,7 @@
 [
     {
-        "title": "Project Template",
-        "subtitle":"An optional subtitle with a one-line description",
+        "title": "Github Pages ePortfolio",
+        "subtitle":"This website",
         "repoName":"727021.github.io",
         "description":"## 727021.github.io\n\n---\n\nThis site was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).\n\n---\n\nTechnologies used:\n- HTML\n- CSS\n- JavaScript\n- [Bootstrap](https://getbootstrap.com/)\n- [jQuery](https://jquery.com/)",
         "publish":true
