--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
         "title": "Github Pages ePortfolio",
         "subtitle":"This website",
         "repoName":"727021.github.io",
-        "description":"## 727021.github.io\n\n---\n\nThis site was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).\n\n---\n\nTechnologies used:\n- HTML\n- CSS\n- JavaScript\n- [Bootstrap](https://getbootstrap.com/)\n- [jQuery](https://jquery.com/)",
+        "description":"### 727021.github.io\n\n---\n\nThis site was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).\n\n---\n\nTechnologies used:\n- HTML\n- CSS\n- JavaScript\n- <a href='https://getbootstrap.com/' target='_blank'>Bootstrap</a>\n- <a href='https://jquery.com/' target='_blank'>jQuery</a>",
         "publish":true
     }
 ]
