--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,50 @@
         "title": "Github Pages ePortfolio",
         "subtitle":"This website",
         "repoName":"727021.github.io",
-        "description":"### 727021.github.io\n\n---\n\nThis site was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).\n\n---\n\nTechnologies used:\n- HTML\n- CSS\n- JavaScript\n- <a href='https://getbootstrap.com/' target='_blank'>Bootstrap</a>\n- <a href='https://jquery.com/' target='_blank'>jQuery</a>",
+        "description":"### 727021.github.io\n\n---\n\nThis site was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).",
+        "technologies":[
+            "HTML",
+            "CSS (Bootstrap)",
+            "JavaScript (jQuery)"
+        ],
+        "publish":true
+    },
+    {
+        "title":"MTGBuilder",
+        "subtitle":"A social deck building site for Magic: The Gathering",
+        "repoName":"MTGBuilder",
+        "description":"**MTGBuilder** is a social deck building site for the *Magic: The Gathering* trading card game written in my Web Engineering II class. It uses a third-party REST API to get card data and stores user and deck information in a SQL database. It has features like status updates, deck sharing/copying, and the ability to follow other users. You can also search cards, decks, and users.",
+        "technologies":[
+            "NodeJS",
+            "PostgreSQL",
+            "EJS",
+            "CSS (Bootstrap)",
+            "JavaScript (jQuery)"
+        ],
+        "publish":true
+    },
+    {
+        "title":"Food Storage Tracker",
+        "subtitle":"An Android application used to track food storage",
+        "repoName":"FoodStorageTracker",
+        "description":"**Food Storage Tracker** is an Android application created as a semester project in my Software Design and Development class. I worked with a team of two other students to design and create this app. It is essentially an interface for a food storage database populated by the user. Users can enter food items they are storing with expiration dates, and will receive notifications when food is close to expiring and needs to be used or replaced.\n\nAs the lead developer on my team, my responsibilities included helping the project manager to determine what assignments needed to be made and maintaining our code on GitHub. I helped our team follow style guidelines and make sound desicions conceringin the design of our application.",
+        "technologies":[
+            "Java",
+            "SQLite",
+            "Android Studio"
+        ],
+        "publish":true
+    },
+    {
+        "title":"MCSong",
+        "subtitle":"A highly customizable server software for Classicube and Minecraft Classic",
+        "repoName":"MCSong",
+        "description":"",
+        "technologies":[
+            "C#",
+            ".NET",
+            "SQLite"
+        ],
         "publish":true
     }
 ]
