Add resume loading animation

--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
         "title": "Github Pages ePortfolio",
         "subtitle":"This website",
         "repoName":"727021.github.io",
-        "description":"### 727021.github.io\n\n---\n\nThis site was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).",
+        "description":"**727021.github.io** was built so I would have a place to share some of the projects I've worked on. Take a look around and let me know what you think! For more information about me and my professional/technical experience, see my [resume](resume.html).",
         "technologies":[
             "HTML",
             "CSS (Bootstrap)",
